--- a/1. Recommendations e web scraping/recommendations.ipynb
+++ b/1. Recommendations e web scraping/recommendations.ipynb
@@ -14,17 +14,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1",
+   "metadata": {},
+   "source": [
+    "## Alternative tradizionali per la ricerca di articoli simili\n",
+    "\n",
+    "Prima dell’avvento degli embedding semantici, i sistemi di raccomandazione testuale spesso usavano metodi come:\n",
+    "\n",
+    "- **Keyword Matching**  \n",
+    "  Ricerca basata sulla presenza di parole chiave identiche tra query e documenti.  \n",
+    "  Svantaggi:  \n",
+    "  - Sensibile a sinonimi e variazioni linguistiche  \n",
+    "  - Non cattura il significato reale del testo  \n",
+    "  - Risultati poco rilevanti se la formulazione cambia anche leggermente\n",
+    "\n",
+    "- **TF-IDF (Term Frequency - Inverse Document Frequency)**  \n",
+    "  Pesa le parole in base alla loro frequenza nel documento e nella collezione, migliorando il keyword matching.  \n",
+    "  Svantaggi:  \n",
+    "  - Ancora basato su parole esatte, poco efficace con sinonimi o espressioni diverse  \n",
+    "  - Non tiene conto del contesto o della semantica del testo  \n",
+    "  - Funziona male con testi brevi o poco strutturati\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Vantaggi dell’approccio basato su embedding semantici\n",
+    "\n",
+    "- **Comprende il significato e il contesto** del testo, non solo la presenza di parole  \n",
+    "- Gestisce sinonimi e variazioni linguistiche automaticamente  \n",
+    "- Funziona bene anche con testi brevi o incompleti  \n",
+    "- Permette di calcolare una **similarità continua** e più fine tra articoli, non solo match esatti  \n",
+    "- Si presta facilmente a integrazioni con modelli di AI e sistemi scalabili\n",
+    "\n",
+    "---\n",
+    "\n",
+    "In sintesi, gli embedding semantici permettono un salto di qualità nel matching testuale, offrendo risultati più pertinenti e naturali rispetto ai metodi tradizionali basati su keyword o TF-IDF.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import warnings\n",
-    "\n",
     "import faiss\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
+    "import warnings\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
@@ -32,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,8 +131,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "tfidf_matrix = vectorizer.fit_transform(df[\"descrizione\"])\n",
+    "\n",
+    "query_descrizione = df.loc[df[\"codice\"] == \"A1001\", \"descrizione\"].values[0]\n",
+    "query_tfidf = vectorizer.transform([query_descrizione])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similarity_tfidf = cosine_similarity(query_tfidf, tfidf_matrix).flatten()\n",
+    "top_tfidf_idx = similarity_tfidf.argsort()[::-1][1:4]\n",
+    "\n",
+    "df[[\"codice\", \"descrizione\", \"categoria\"]].loc[top_tfidf_idx.tolist()]"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "3",
+   "id": "6",
    "metadata": {},
    "source": [
     "## Cosa sono gli embedding?\n",
@@ -111,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +193,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"embedding\"].iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(df[\"embedding\"].iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "11",
    "metadata": {},
    "source": [
     "## Similarità tra vettori\n",
@@ -165,9 +253,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "12",
+   "metadata": {},
+   "source": [
+    "## Cosine Similarity vs L2 Similarity (distanza euclidea)\n",
+    "\n",
+    "Quando confrontiamo vettori (come gli embedding), possiamo misurare quanto sono \"simili\" usando metriche diverse:\n",
+    "\n",
+    "- **Cosine Similarity**: misura l'angolo tra due vettori. Indica quanto sono orientati nella stessa direzione, indipendentemente dalla loro lunghezza.\n",
+    "  - Valori tra -1 e 1.\n",
+    "  - 1 = vettori perfettamente allineati (massima similarità).\n",
+    "  - 0 = vettori ortogonali (nessuna similarità).\n",
+    "  - -1 = vettori opposti.\n",
+    "\n",
+    "- **L2 Similarity** (o distanza euclidea): misura la distanza \"lineare\" tra due punti nello spazio.\n",
+    "  - Più la distanza è piccola, più i vettori sono vicini.\n",
+    "  - La distanza è sempre ≥ 0.\n",
+    "\n",
+    "In generale:\n",
+    "\n",
+    "- La cosine similarity si concentra sull'**orientamento** del vettore.\n",
+    "- La L2 similarity si concentra sulla **distanza spaziale**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Nei motori di ricerca vettoriali come FAISS, a seconda del tipo di indice, si usa una o l'altra: \n",
+    "- Indici basati su distanza L2 cercano i vettori più **vicini** spazialmente.\n",
+    "- Indici basati su cosine similarity cercano i vettori con angoli più **piccoli**.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def cosine_similarity(a, b):\n",
+    "    return np.dot(a, b) / (np.linalg.norm(a) * np.linalg.norm(b))\n",
+    "\n",
+    "def l2_distance(a, b):\n",
+    "    return np.linalg.norm(a - b)\n",
+    "\n",
+    "# Vettori di esempio (2D per visualizzazione)\n",
+    "v1 = np.array([1, 0])\n",
+    "v2 = np.array([0.5, 0.5])\n",
+    "v3 = np.array([-1, 0])\n",
+    "\n",
+    "print(\"Cosine similarity v1-v2:\", cosine_similarity(v1, v2))\n",
+    "print(\"L2 distance v1-v2:\", l2_distance(v1, v2))\n",
+    "print(\"Cosine similarity v1-v3:\", cosine_similarity(v1, v3))\n",
+    "print(\"L2 distance v1-v3:\", l2_distance(v1, v3))\n",
+    "\n",
+    "# Visualizzazione\n",
+    "origin = np.array([0, 0])\n",
+    "\n",
+    "plt.figure(figsize=(6, 6))\n",
+    "plt.quiver(*origin, *v1, color='r', scale=3, label='v1')\n",
+    "plt.quiver(*origin, *v2, color='g', scale=3, label='v2')\n",
+    "plt.quiver(*origin, *v3, color='b', scale=3, label='v3')\n",
+    "plt.xlim(-1.5, 1.5)\n",
+    "plt.ylim(-1.5, 1.5)\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "plt.title(\"Visualizzazione vettori e loro angoli\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "18",
    "metadata": {},
    "source": [
     "# Conclusioni\n",
@@ -262,12 +424,6 @@
     "1. Usa **embedding semantici** di Azure OpenAI per rappresentare articoli come vettori numerici.\n",
     "2. Indica articoli simili cercandoli in uno spazio vettoriale con **FAISS**.\n",
     "3. Mostra un'alternativa moderna a TF-IDF e keyword matching, capace di cogliere la **semantica**.\n",
-    "\n",
-    "## Estensioni possibili:\n",
-    "- Salvataggio e caricamento dell’indice FAISS su disco\n",
-    "- Uso di un vector database esterno (Pinecone, Qdrant)\n",
-    "- Aggiunta di filtri strutturali (categoria, disponibilità, ecc.)\n",
-    "- Calcolo di embedding offline (batch) e salvataggio in database\n",
     "\n",
     "---"
    ]
