--- a/1. Recommendations e web scraping/web_scraping.ipynb
+++ b/1. Recommendations e web scraping/web_scraping.ipynb
@@ -270,19 +270,118 @@
    "id": "19",
    "metadata": {},
    "source": [
-    "## 6. Conclusioni\n",
+    "## 6. Analisi del file robots.txt\n",
     "\n",
-    "In questo notebook abbiamo imparato a:\n",
-    "- Effettuare richieste HTTP con `requests`\n",
-    "- Analizzare e navigare un documento HTML con `BeautifulSoup`\n",
-    "- Estrarre dati strutturati da più pagine\n",
+    "Il file `robots.txt` è uno standard usato dai siti web per indicare ai bot (crawler, scraper) quali pagine possono o non possono essere visitate.\n",
     "\n",
-    "### Prossimi passi:\n",
-    "- Salvare i dati in CSV o JSON\n",
-    "- Gestire siti più complessi con contenuti dinamici (JavaScript)\n",
-    "- Analizzare il `robots.txt` per rispetto delle regole di scraping\n",
+    "### Perché è importante leggere `robots.txt`?\n",
+    "- Rispettare le regole del sito web (etica del scraping)\n",
+    "- Evitare di essere bloccati o bannati\n",
+    "- Comprendere quali sezioni sono accessibili ai bot\n",
     "\n",
-    "---"
+    "---\n",
+    "\n",
+    "Un esempio di file `robots.txt` può essere:\n",
+    "\n",
+    "User-agent: *\n",
+    "Disallow: /private/\n",
+    "Allow: /public/\n",
+    "\n",
+    "Significa che tutti i bot (`*`) non possono visitare `/private/`, ma possono visitare `/public/`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fetch_robots_txt(base_url):\n",
+    "    if not base_url.endswith('/'):\n",
+    "        base_url += '/'\n",
+    "    robots_url = base_url + \"robots.txt\"\n",
+    "    response = requests.get(robots_url)\n",
+    "    if response.status_code == 200:\n",
+    "        return response.text\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "site = \"https://www.wikipedia.org\"\n",
+    "robots_txt = fetch_robots_txt(site)\n",
+    "print(\"robots.txt content:\\n\")\n",
+    "print(robots_txt)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21",
+   "metadata": {},
+   "source": [
+    "### Interpretazione semplificata del file robots.txt\n",
+    "\n",
+    "Vediamo ora come estrarre le regole principali:\n",
+    "\n",
+    "- **User-agent**: definisce a quali bot si applicano le regole successive\n",
+    "- **Disallow**: percorsi vietati ai bot specificati\n",
+    "- **Allow**: percorsi esplicitamente permessi\n",
+    "\n",
+    "Qui mostreremo un parser semplice che stampa le regole per tutti i bot (`*`)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_robots_txt(robots_txt):\n",
+    "    lines = robots_txt.splitlines()\n",
+    "    user_agent = None\n",
+    "    rules = {\"Disallow\": [], \"Allow\": []}\n",
+    "    for line in lines:\n",
+    "        line = line.strip()\n",
+    "        if not line or line.startswith(\"#\"):\n",
+    "            continue\n",
+    "        if line.lower().startswith(\"user-agent:\"):\n",
+    "            user_agent = line.split(\":\", 1)[1].strip()\n",
+    "        elif line.lower().startswith(\"disallow:\") and user_agent == \"*\":\n",
+    "            path = line.split(\":\", 1)[1].strip()\n",
+    "            if path:\n",
+    "                rules[\"Disallow\"].append(path)\n",
+    "        elif line.lower().startswith(\"allow:\") and user_agent == \"*\":\n",
+    "            path = line.split(\":\", 1)[1].strip()\n",
+    "            if path:\n",
+    "                rules[\"Allow\"].append(path)\n",
+    "    return rules\n",
+    "\n",
+    "if robots_txt:\n",
+    "    rules = parse_robots_txt(robots_txt)\n",
+    "    print(\"Regole per User-agent '*':\")\n",
+    "    print(\"Disallow:\", rules[\"Disallow\"])\n",
+    "    print(\"Allow:\", rules[\"Allow\"])\n",
+    "else:\n",
+    "    print(\"Nessun file robots.txt trovato o non accessibile.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23",
+   "metadata": {},
+   "source": [
+    "## Conclusioni\n",
+    "\n",
+    "In questo notebook abbiamo visto come:\n",
+    "\n",
+    "- Fare scraping semplice con `requests` e `BeautifulSoup`\n",
+    "- Estrarre dati e salvarli in CSV\n",
+    "- Gestire autenticazione Basic HTTP\n",
+    "- Scaricare e interpretare il file `robots.txt` per rispettare le regole di scraping\n",
+    "\n",
+    "Leggere e rispettare il file `robots.txt` è fondamentale per uno scraping etico e sostenibile.\n",
+    "\n",
+    "Per pagine con contenuti caricati dinamicamente via JavaScript, si può ricorrere a strumenti più avanzati come Selenium o Playwright, che permettono di eseguire un browser reale o headless e interagire con la pagina.."
    ]
   }
  ],
