--- a/2. Smart factory/genetic_algorithm.ipynb
+++ b/2. Smart factory/genetic_algorithm.ipynb
@@ -249,7 +249,7 @@
     "    return np.random.uniform(domain[0], domain[1], population_size)\n",
     "\n",
     "\n",
-    "def tournament_selection(pop, fitness, k=3):\n",
+    "def tournament_selection(pop, k=3):\n",
     "    selected = np.random.choice(pop, k)\n",
     "    selected_fitness = fitness_function(selected)\n",
     "    return selected[np.argmax(selected_fitness)]\n",
@@ -280,13 +280,17 @@
     "avg_fitness_per_gen = []\n",
     "min_fitness_per_gen = []\n",
     "\n",
+    "# Lista per salvare popolazioni da mostrare ogni 20 generazioni\n",
+    "pop_snapshots = []\n",
+    "gen_snapshots = []\n",
+    "\n",
     "for gen in range(generations):\n",
     "    fitness = fitness_function(population)\n",
     "    next_population = []\n",
     "\n",
     "    for _ in range(population_size):\n",
-    "        parent1 = tournament_selection(population, fitness)\n",
-    "        parent2 = tournament_selection(population, fitness)\n",
+    "        parent1 = tournament_selection(population)\n",
+    "        parent2 = tournament_selection(population)\n",
     "        child = crossover(parent1, parent2)\n",
     "        child = mutate(child)\n",
     "        next_population.append(child)\n",
@@ -298,17 +302,41 @@
     "    min_fitness_per_gen.append(np.min(f_vals))\n",
     "\n",
     "    if gen % 20 == 0 or gen == generations - 1:\n",
-    "        plt.figure(figsize=(8, 4))\n",
-    "        plt.plot(x_vals, y_vals, label=\"Funzione obiettivo\")\n",
-    "        plt.scatter(\n",
-    "            population, fitness_function(population), color=\"red\", label=\"Popolazione\"\n",
-    "        )\n",
-    "        plt.title(f\"Generazione {gen}\")\n",
-    "        plt.xlabel(\"x\")\n",
-    "        plt.ylabel(\"f(x)\")\n",
-    "        plt.legend()\n",
-    "        plt.grid(True)\n",
-    "        plt.show()"
+    "        pop_snapshots.append(population.copy())\n",
+    "        gen_snapshots.append(gen)\n",
+    "\n",
+    "# Plot delle popolazioni salvate in subplot\n",
+    "num_snapshots = len(pop_snapshots)\n",
+    "cols = 3\n",
+    "rows = (num_snapshots + cols - 1) // cols\n",
+    "fig, axes = plt.subplots(rows, cols, figsize=(cols*5, rows*4))\n",
+    "axes = axes.flatten()\n",
+    "\n",
+    "for i, (pop_plot, gen_num) in enumerate(zip(pop_snapshots, gen_snapshots)):\n",
+    "    axes[i].plot(x_vals, y_vals, label=\"Funzione obiettivo\")\n",
+    "    axes[i].scatter(pop_plot, fitness_function(pop_plot), color=\"red\", label=\"Popolazione\")\n",
+    "    axes[i].set_title(f\"Generazione {gen_num}\")\n",
+    "    axes[i].set_xlabel(\"x\")\n",
+    "    axes[i].set_ylabel(\"f(x)\")\n",
+    "    axes[i].legend()\n",
+    "    axes[i].grid(True)\n",
+    "\n",
+    "# Disabilita eventuali assi extra vuoti\n",
+    "for j in range(i+1, len(axes)):\n",
+    "    axes[j].axis('off')\n",
+    "\n",
+    "# Plot unico andamento fitness\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(best_fitness_per_gen, label=\"Fitness migliore\")\n",
+    "plt.plot(avg_fitness_per_gen, label=\"Fitness media\")\n",
+    "plt.plot(min_fitness_per_gen, label=\"Fitness minima\")\n",
+    "plt.title(\"Andamento fitness per generazione\")\n",
+    "plt.xlabel(\"Generazione\")\n",
+    "plt.ylabel(\"Valore fitness\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -326,37 +354,141 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14",
+   "metadata": {},
+   "source": [
+    "## Elitismo negli Algoritmi Genetici\n",
+    "\n",
+    "L’elitismo è una tecnica che migliora la robustezza e la velocità di convergenza degli algoritmi genetici.\n",
+    "\n",
+    "### Cos’è l’elitismo?\n",
+    "\n",
+    "Consiste nel preservare una piccola percentuale dei migliori individui (l’**élite**) da una generazione all’altra senza sottoporli a crossover o mutazione.\n",
+    "\n",
+    "### Perché usarlo?\n",
+    "\n",
+    "- **Garantisce che la qualità minima della popolazione non peggiori** nel tempo.\n",
+    "- **Accelera la convergenza** preservando le migliori soluzioni trovate.\n",
+    "- Evita che soluzioni di alta qualità vengano perse a causa della casualità delle operazioni genetiche.\n",
+    "\n",
+    "### Come si implementa?\n",
+    "\n",
+    "Nell’implementazione dell’algoritmo, dopo aver selezionato e generato la nuova popolazione, si copiano direttamente gli individui migliori della generazione precedente.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Di seguito un esempio pratico che implementa un algoritmo genetico con elitismo e confronta l’andamento con e senza elitismo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(best_fitness_per_gen, label=\"Best\")\n",
-    "plt.plot(avg_fitness_per_gen, label=\"Average\")\n",
-    "plt.plot(min_fitness_per_gen, label=\"Worst\")\n",
-    "plt.title(\"Fitness per generazione\")\n",
+    "elite_size = 2  # Numero di individui migliori da mantenere\n",
+    "population = initialize_population()\n",
+    "best_fitness_per_gen = []\n",
+    "avg_fitness_per_gen = []\n",
+    "min_fitness_per_gen = []\n",
+    "\n",
+    "pop_snapshots = []\n",
+    "gen_snapshots = []\n",
+    "\n",
+    "for gen in range(generations):\n",
+    "    fitness = fitness_function(population)\n",
+    "    next_population = []\n",
+    "\n",
+    "    # Seleziono gli elite: migliori individui da copiare direttamente\n",
+    "    elite_indices = np.argsort(fitness)[-elite_size:]\n",
+    "    elites = population[elite_indices]\n",
+    "\n",
+    "    # Aggiungo gli elite alla prossima popolazione\n",
+    "    next_population.extend(elites)\n",
+    "\n",
+    "    # Creo il resto della popolazione con crossover e mutazione\n",
+    "    while len(next_population) < population_size:\n",
+    "        parent1 = tournament_selection(population)\n",
+    "        parent2 = tournament_selection(population)\n",
+    "        child = crossover(parent1, parent2)\n",
+    "        child = mutate(child)\n",
+    "        next_population.append(child)\n",
+    "\n",
+    "    population = np.array(next_population)\n",
+    "    f_vals = fitness_function(population)\n",
+    "    best_fitness_per_gen.append(np.max(f_vals))\n",
+    "    avg_fitness_per_gen.append(np.mean(f_vals))\n",
+    "    min_fitness_per_gen.append(np.min(f_vals))\n",
+    "\n",
+    "    if gen % 20 == 0 or gen == generations - 1:\n",
+    "        pop_snapshots.append(population.copy())\n",
+    "        gen_snapshots.append(gen)\n",
+    "\n",
+    "# Plot delle popolazioni salvate in subplot\n",
+    "num_snapshots = len(pop_snapshots)\n",
+    "cols = 3\n",
+    "rows = (num_snapshots + cols - 1) // cols\n",
+    "fig, axes = plt.subplots(rows, cols, figsize=(cols*5, rows*4))\n",
+    "axes = axes.flatten()\n",
+    "\n",
+    "for i, (pop_plot, gen_num) in enumerate(zip(pop_snapshots, gen_snapshots)):\n",
+    "    axes[i].plot(x_vals, y_vals, label=\"Funzione obiettivo\")\n",
+    "    axes[i].scatter(pop_plot, fitness_function(pop_plot), color=\"red\", label=\"Popolazione\")\n",
+    "    axes[i].set_title(f\"Generazione {gen_num}\")\n",
+    "    axes[i].set_xlabel(\"x\")\n",
+    "    axes[i].set_ylabel(\"f(x)\")\n",
+    "    axes[i].legend()\n",
+    "    axes[i].grid(True)\n",
+    "\n",
+    "# Disabilita eventuali assi extra vuoti\n",
+    "for j in range(i+1, len(axes)):\n",
+    "    axes[j].axis('off')\n",
+    "\n",
+    "# Plot unico andamento fitness\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(best_fitness_per_gen, label=\"Fitness migliore\")\n",
+    "plt.plot(avg_fitness_per_gen, label=\"Fitness media\")\n",
+    "plt.plot(min_fitness_per_gen, label=\"Fitness minima\")\n",
+    "plt.title(\"Andamento fitness per generazione\")\n",
     "plt.xlabel(\"Generazione\")\n",
-    "plt.ylabel(\"Fitness\")\n",
+    "plt.ylabel(\"Valore fitness\")\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "source": [
-    "## Risultati finali\n",
+    "## Conclusioni\n",
     "\n",
-    "Dopo il numero di generazioni prestabilito, selezioniamo il miglior individuo come soluzione finale.\n",
+    "In questo notebook abbiamo esplorato il funzionamento pratico di un algoritmo genetico per ottimizzare una funzione obiettivo non lineare.\n",
     "\n",
-    "Nel nostro esempio, il valore di \\(x\\) corrispondente al massimo trovato e il suo valore di fitness sono mostrati.\n",
+    "Abbiamo visto come si articolano i principali passaggi:\n",
     "\n",
-    "Notiamo che la popolazione si concentra sulle zone di massimo della funzione obiettivo.\n",
+    "- La **funzione di fitness**, che misura la qualità delle soluzioni (individui) e guida la selezione naturale.\n",
+    "- La **selezione** tramite torneo, che favorisce gli individui con fitness più alta nella scelta dei genitori.\n",
+    "- Il **crossover**, che combina informazioni genetiche di due genitori per generare un figlio potenzialmente migliore.\n",
+    "- La **mutazione**, che introduce variazioni casuali per mantenere la diversità genetica e prevenire la stagnazione.\n",
+    "- L’**elitismo**, che preserva gli individui migliori tra una generazione e l’altra, migliorando la stabilità e accelerando la convergenza.\n",
     "\n",
-    "La convergenza è visibile anche dal grafico che mostra l’andamento della fitness (migliore, media e peggiore) nel tempo.\n"
+    "Attraverso grafici esplicativi, abbiamo reso visibili questi concetti e mostrato come evolve la popolazione lungo le generazioni.\n",
+    "\n",
+    "Il confronto tra algoritmo con e senza elitismo ha evidenziato che:\n",
+    "\n",
+    "- L’algoritmo con elitismo tende a raggiungere valori migliori di fitness più rapidamente e a mantenere una popolazione mediamente più forte.\n",
+    "- L’eliminazione delle soluzioni migliori è minimizzata, evitando regressioni e favorendo una convergenza più efficace.\n",
+    "\n",
+    "Tuttavia, la scelta dei parametri come la dimensione della popolazione, la frequenza di mutazione, la selezione e la quantità di elite è cruciale per bilanciare esplorazione e sfruttamento, ed evitare il rischio di convergenza prematura su minimi locali.\n",
+    "\n",
+    "L’algoritmo genetico è quindi una potente metaeuristica versatile, ma richiede attenzione nella configurazione e interpretazione dei risultati per essere efficace in problemi reali.\n",
+    "\n",
+    "Questo notebook offre una base di partenza chiara e pratica per approfondire e sperimentare ulteriormente le varianti e applicazioni degli algoritmi evolutivi.\n"
    ]
   }
  ],
