--- a/3. Supply chain/forecasting.ipynb
+++ b/3. Supply chain/forecasting.ipynb
@@ -389,6 +389,23 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26",
+   "metadata": {},
+   "source": [
+    "## Conclusioni\n",
+    "\n",
+    "In questo notebook abbiamo esplorato diverse tecniche di forecasting delle vendite con variabili esogene.  \n",
+    "Abbiamo visto come modelli lineari semplici come **Ridge Regression** possano fornire baseline interpretabili e stabili, mentre modelli più complessi come **XGBoost** permettono di catturare interazioni non lineari e migliorare la precisione.  \n",
+    "L’inserimento di una rete neurale feedforward (**MLP**) ha mostrato un approccio di deep learning capace di modellare relazioni più complesse, anche se richiede più dati e risorse computazionali.\n",
+    "\n",
+    "Il processo di preprocessing e l’analisi esplorativa sono fondamentali per comprendere la struttura dei dati e migliorare la qualità delle previsioni.  \n",
+    "Infine, la visualizzazione comparativa dei risultati aiuta a interpretare le differenze di performance tra i modelli.\n",
+    "\n",
+    "Per casi d’uso più avanzati, soprattutto con serie temporali complesse o dati multivariati estesi, è possibile estendere questo approccio includendo modelli specifici per il forecasting (es. SARIMAX, Prophet) o reti neurali ricorrenti (LSTM, GRU, TFT)."
+   ]
   }
  ],
  "metadata": {
