--- a/3. Supply chain/stock_optimization.ipynb
+++ b/3. Supply chain/stock_optimization.ipynb
@@ -223,17 +223,17 @@
    "id": "14",
    "metadata": {},
    "source": [
-    "## Conclusioni\n",
+    "# Conclusioni\n",
     "\n",
-    "L’introduzione del livello di servizio consente di tenere conto dell’incertezza nella domanda.\n",
+    "In questo notebook abbiamo illustrato una strategia di prevenzione della rottura di stock basata su:\n",
     "\n",
-    "➡️ La scorta di sicurezza riduce il rischio di rottura di stock  \n",
-    "➡️ La data d’ordine viene anticipata per garantire una disponibilità sufficiente\n",
+    "- Previsioni di vendita giornaliere\n",
+    "- Monitoraggio continuo dell’andamento dello stock\n",
+    "- Calcolo del livello di riordino considerando un **service level** per gestire l’incertezza nella domanda\n",
+    "- Introduzione di una scorta di sicurezza che funge da buffer contro variazioni impreviste nella domanda durante il lead time\n",
+    "- Simulazione di uno scenario “what-if” che mostra come un ordine tempestivo e calibrato possa prevenire la rottura di stock\n",
     "\n",
-    "Questo tipo di logica può essere esteso facilmente a:\n",
-    "- prodotti multipli\n",
-    "- variabilità nel lead time\n",
-    "- simulazioni Monte Carlo per validazione"
+    "Questa metodologia consente di migliorare l’affidabilità della supply chain, riducendo i rischi di stock-out e garantendo un livello di servizio più elevato verso il cliente finale.\n"
    ]
   }
  ],
