Aggiunta nota su httpbin vs httpbingo

--- a/1. Recommendations e web scraping/web_scraping.ipynb
+++ b/1. Recommendations e web scraping/web_scraping.ipynb
@@ -270,6 +270,15 @@
    "id": "19",
    "metadata": {},
    "source": [
+    "Nota: su ambienti cloud come Binder, alcuni endpoint come `httpbin.org` possono restituire errore 503 a causa di limiti di rete o protezioni contro scraping automatici.  \n",
+    "In alternativa, puoi usare `https://httpbingo.org` che offre gli stessi endpoint."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20",
+   "metadata": {},
+   "source": [
     "## 6. Analisi del file robots.txt\n",
     "\n",
     "Il file `robots.txt` è uno standard usato dai siti web per indicare ai bot (crawler, scraper) quali pagine possono o non possono essere visitate.\n",
@@ -293,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "source": [
     "### Interpretazione semplificata del file robots.txt\n",
@@ -332,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "source": [
     "## Conclusioni\n",
